# cross-detect

./: .gitignore  GNUmakefile  configure.ac  toolchain.mk.in
